--- a/src/index.html
+++ b/src/index.html
@@ -8,10 +8,10 @@
   integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
   crossorigin="anonymous"
 />
-  <link rel="stylesheet" href="index.scss" />
+  <link rel="stylesheet" href="./index.scss" />
   </head>
   <body>
     <div id="root"></div>
-    <script src="index.js" type="module"></script>
+    <script src="./index.js" type="module"></script>
   </body>
 </html>
